--- a/konseptdokument/concept.tex
+++ b/konseptdokument/concept.tex
@@ -188,8 +188,8 @@ angrep kan angripe forsvar).
 \label{fig:spillmatrise}
 \end{figure}
 \end{center}
-I figur~\ref{fig:spillmatrise} er elementene som interagerer er merket
-med en \textbf{X} i den kolonnen og raden de elementene sammenfaller i.
+I figur~\ref{fig:spillmatrise} er elementene som interagerer merket
+med en \textbf{X} i den kolonnen og raden elementene sammenfaller.
 Hvordan elementene interagerer er beskrevet nedenfor:
 \begin{description}
 \item \textbf{Spilleren}\\Spilleren sin oppgave er å samle søppel,
@@ -198,12 +198,12 @@ bygge våpen og forsvar, samt oppgradere miljøstasjonen.
 søppelet. I tillegg er dette hovedbasen for spilleren, og står for alle
 oppgraderingene. En miljøstasjon kan bli angrepet av andre spillere, og
 interagerer derfor med våpen.
-\item \textbf{Søppel}\\Blir plukket opp av spilleren, og lagt på
+\item \textbf{Søppel}\\Søppel blir plukket opp av spilleren, og lagt på
 miljøstasjonen for gjenvinning.
-\item \textbf{Angrep}\\Spillere kan angripe andre spillere sitt forsvar,
+\item \textbf{Angrep}\\Spillere kan angripe andre spillere sitt forsvar, angrep (våpen) 
 og miljøstasjonene deres.
 \item \textbf{Forsvar}\\Forsvaret kan bli angrepet og ødelagt av våpen.
-En spiller bygger forsvaret, derfor koblingen mellom spiller og forsvar.
+En spiller bygger forsvaret, og har derfor interaksjonen mellom spiller og forsvar.
 \item \textbf{Oppgraderinger}\\Spilleren kan oppgradere miljøstasjonen
 sin. Disse oppgraderingene baserer seg på statusen til miljøstasjonen.
 \end{description}
