--- a/konseptdokument/concept.tex
+++ b/konseptdokument/concept.tex
@@ -216,7 +216,7 @@ sin. Disse oppgraderingene baserer seg på statusen til miljøstasjonen.
 Dette delkapittelet forteller om de forskjellige negative og positive
 konsekvensene en spiller kan og vil oppleve gjennom spillets gang. Disse konsekvensene har som hensikt å underbygge landsbyens overordnede tema, som et ledd i å hjelpe spilleren til å forstå hva en gjør som er riktig, og hva en gjør som er galt.
 
-Gjennom å oppgradere miljøstasjonen og dermed kunne bedre håndtere søpla på øya vil en kunne visuelt se at øya blir renere, atmosfæren blir klarere og bakgrunnsmusikken blir penere. Lystige lydeffekter signaliserer at en gjør noe som gir spilleren en fordel i forhold til motspillerne, for eksempel når spilleren oppgraderer utstyr eller utfører et vellykket angrep mot sine
+Gjennom å oppgradere miljøstasjonen og dermed kunne bedre håndtere søppelet på øya vil en kunne visuelt se at øya blir renere, atmosfæren blir klarere og bakgrunnsmusikken blir penere. Lystige lydeffekter signaliserer at en gjør noe som gir spilleren en fordel i forhold til motspillerne, for eksempel når spilleren oppgraderer utstyr eller utfører et vellykket angrep mot sine
 motstandere. Dette skal skaper en positiv mestringsfølelse hos spilleren. 
 
 Videre er der en intrisitt verdi i å vinne et spill over ens
@@ -235,7 +235,7 @@ Når en vinner eller taper et spill vil dette føres opp på spillerens
 profil. Med dette kan hver spiller ha oversikt over sin egen
 spillstatistikk. På spillerens profil finnes det også et profilbilde av
 en kriger. Bildet vil også være synlig for de spillerne man spiller mot
-under et spill. Man begynner med et default profilbilde, og etterhvert
+under et spill. Man begynner med et standard profilbilde, og etterhvert
 som man vinner mange spill får man muligheten til å endre dette bilde.
 Målet med dette er å gi spilleren en visuell prestasjonspremie, i
 tillegg får de spillerne man spiller mot en idé om hvor mye motspilleren
@@ -262,17 +262,17 @@ har spilt spillet tidligere.
 \subsection{Brukergrensesnitt}
 
 Brukergrensessnittet i spillprototypen er svært uferdig, men noe av funksjonaliteten er på plass for å bedre kunne illustrere våre ideer og tanker rundt konseptet. 
-For å gjøre spillet tilgjengelig for vår målgruppe er Garbage Alerts brukergrensesnitt er på norsk, samt at spillets figurer og illustrasjoner er ment å være stiliserte og enkle å forstå.
+For å gjøre spillet tilgjengelig for vår målgruppe er Garbage Alerts brukergrensesnitt på norsk, samt at spillets figurer og illustrasjoner er ment å være stiliserte og enkle å forstå.
 
 
-Det en først ser når en starter spillet er en introskjerm som med sin overdrevne grafikk og lydbilde er ment å sette spilleren i et kompetetivt sinnelag.
-Fra denne skjermen er det mulig å starte spillet ved å trykke den store knappen markert "Start".
-En mer ferdig versjon vil andre valg fra denne skjermen være å stille inn ting som spillernavn, samt mulighet for å koble flere spillere sammen i et flerspillerspill.
+Det man først ser når man starter spillet er en introskjerm som med sin overdrevne grafikk og lydbilde er ment å sette spilleren i et kompetetivt sinnelag.
+Fra denne skjermen er det mulig å starte spillet ved å trykke på den store knappen markert "Start".
+En komplett versjon av spillet vil gi spilleren flere valg på introskjermen, som å endre spillernavn, samt gi muligheten til å koble flere spillere sammen i et flerspillerspill.
 
 
-Spillets hovedskjerm\footnote{Den delen av spillet hvor spillet faktisk spilles.} består av et overblikksbilde av alle øyene som er med i spillet. I prototypen er antallet begrenset til to, men en mer moden versjon vil inneholde muligheten til å spille flere enn to stykker samtidig. En skiller mellom en selv og andre ved bruk av ulike farger på spillernes miljøstasjon, våpen og forsvar. I prototypen har vi valgt å fargelegge de to faksjonene rød og blå.
+Spillets hovedskjerm\footnote{Den delen av spillet hvor spillet faktisk spilles.} består av et overblikksbilde av alle øyene som er med i spillet. I prototypen er antallet begrenset til to, men en mer moden versjon vil inneholde muligheten til å spille flere enn to stykker samtidig. En skiller mellom seg selv og andre ved bruk av ulike farger på spillernes miljøstasjon, våpen og forsvar. I prototypen har vi valgt å fargelegge de to faksjonene rød og blå.
 
-I prototypen er hovedskjermen et statisk fugleperspektiv av alle øyene og alle spillets elementer. En ferdig versjon vil og inneholde muligheten til å veksle mellom et detaljbilde av ens egen øy og overblikksbildet over alle øyer. Hvorvidt dette vil gjøres via en knapp som veksler mellom de to visningsmodi eller om en vil "klype for å zoome" er på dette stadiet noe uvisst og bør testes via brukertesting for å finne den optimale metoden.
+I prototypen er hovedskjermen et statisk fugleperspektiv av alle øyene og alle spillets elementer. En ferdig versjon vil også inneholde muligheten til å veksle mellom et detaljbilde av spillerens egen øy og et overblikksbilde over alle øyer. Hvorvidt dette vil gjøres via en knapp som veksler mellom de to visningsmodi eller om en vil "klype for å zoome" er på dette stadiet noe uvisst og bør testes via brukertesting for å finne den optimale metoden.
 
 Garbage Alert er tenkt å først og fremst spilles på mobiltelefoner og andre enheter med berøringsskjerm. En interagerer derfor med elementene på skjermen ved å trykke på de. Det en må være spesielt oppmerksom på med slike skjermer er å holde knapper store nok, samt at aller elementer på skjermen må være forskjellige nok til at det er enkelt å skille de fra hverandre på små skjermer.
 
