Restructured some text

--- a/konseptdokument/tech.tex
+++ b/konseptdokument/tech.tex
@@ -1,11 +1,15 @@
 %!TEX root = report.tex
 \section{Teknisk utførelse}\label{sec:teknisk}
-Denne seksjonen vil detaljere hvordan Garbage Alert per i dag er implementert, samt tanker om videre utvikling til en eventuell ferdig versjon.
-
-
+Denne seksjonen vil detaljere hvordan Garbage Alert per i dag er
+implementert, samt tanker om videre utvikling til en eventuell ferdig
+versjon.
 \subsection{Tidlig prototype}
-Tidlig i prosessen utviklet vi en enkel web-basert prototype vi kunne bruke for å utforske spillets dynamikk, og å bedre kunne fastslå hvilke deler av konseptet som fungerer og de som ikke fungerer. Se figur \ref{fig:screenshot_tidlig_prototype} under for et skjermskudd av denne tidlige prototypen. Et mål her var å ha noe som fungerer, men samtidig realisere den med minimal bruk av tid.
-
+Tidlig i prosessen ble det utviklet en enkel web-basert prototype som
+kunne brukes for å utforske spillets dynamikk. Denne var hjelpsom for å
+fastslå hvilke deler av konseptet som fungerte, og ikke fungerte. Se
+figur~\ref{fig:screenshot_tidlig_prototype}, under for et skjermskudd av
+denne prototypen. Et mål var å ha noe som fungerte, men samtidig
+realisere den med minimal bruk av tid.
 \begin{figure} [H]
 	\begin{center}
 	\includegraphics[scale=0.3]{images/screenshot_tidlig_prototype.png}
@@ -14,7 +18,14 @@ Tidlig i prosessen utviklet vi en enkel web-basert prototype vi kunne bruke for 
 	\label{fig:screenshot_tidlig_prototype}
 \end{figure}
 
-Denne programkoden, sammen med penn, papir og en solid dose fantasi gjorde oss i stand til å spille spillet sammen på et veldig tidlig stadie, noe som gjorde oss i stand til å gjøre nødvendige justeringer for å gjøre spillet morsommere å spille. Vi kunne og gjøre et bedre anslag på spillets ressurskostnader og nedkjølinger\footnote{Nedkjølinger er et ord som benyttes om den tiden det tar fra du utfører en handling til du får lov til å utfører den igjen.}.
+Denne programkoden, sammen med penn, papir og en solid dose fantasi
+gjorde oss i stand til å spille spillet sammen på et veldig tidlig
+stadie, noe som gjorde oss i stand til å gjøre nødvendige justeringer
+for å gjøre spillet morsommere å spille. Vi kunne og gjøre et bedre
+anslag på spillets ressurskostnader og
+nedkjølinger\footnote{Nedkjølinger er et ord som benyttes om den tiden
+det tar fra du utfører en handling til du får lov til å utfører den
+igjen.}.
 
 Denne prototype-koden ble og senere mye brukt, sammen med en bedre grafisk presentasjon, for å realisere den endelige protoypen.
 
