--- a/konseptdokument/concept.tex
+++ b/konseptdokument/concept.tex
@@ -104,8 +104,8 @@ Garbage Alert er i utgangspunktet et flerspiller sanntidsstrategispill,
 men det er også mulighet for å spille alene mot spillere med kunstig
 intelligens. Hver spiller starter med en øy og følgende elementer:
 \begin{itemize}
-	\item Et miljøstasjon
-	\item En våpenstasjon
+	\item En miljøstasjon
+	\item Tre angrepsplattformer
 	\item En forsvarssone
 	\item 10 enheter med papp i inventaret
 	\item 1000 enheter med søppel
