--- a/konseptdokument/definisjoner.tex
+++ b/konseptdokument/definisjoner.tex
@@ -21,7 +21,7 @@ mangfold blir først demonstrert om den spiller velger å kombinere
 taktikkene.
 \subsubsection{Hvordan tape}
 En spiller taper dersom miljøstasjonen hans blir ødelagt. Stasjonen
-tåler en gitt mengde skade (i forhold til våpentype), før den kollapser.
-Stasjonen kan repareres, for en viss mengde ressurser.
+tåler en gitt mengde skade før den kollapser, men kan også repareres ved 
+bruk av en viss andel ressurser.
 Spilleren vil også tape dersom en annen spiller klarer å rydde sin øy
 for søppel.
