--- a/konseptdokument/spillelement.tex
+++ b/konseptdokument/spillelement.tex
@@ -100,7 +100,7 @@ En spiller som har en type mur, kan oppgradere muren til en bedre mur. En slik o
 
 
 \subsubsection{Reparasjoner}
-Både mur, våpen og miljøstasjon kan repareres. Prisen på en reparasjon tar et prosentvis utgangspunkt i prisen på en ny bygning. I tillegg antas det at 50\% av den ødelagte delen av bygningen kan gjenbrukes. Eksempelvis så kan en mur som har mistet halvparten av hitpointsene sine repareres for 25\% av prisen på en ny mur (halvparten av de ødelagte materialene kan brukes igjen, dermed må spilleren kun betale for den resterende fjerdedelen av muren).
+Både mur, våpen og miljøstasjon kan repareres. Prisen på en reparasjon tar et prosentvis utgangspunkt i prisen på en ny bygning. I tillegg antas det at 50\% av den ødelagte delen av bygningen kan gjenbrukes. Eksempelvis så kan en mur som har mistet halvparten av helsepoengene sine repareres for 25\% av prisen på en ny mur (halvparten av de ødelagte materialene kan brukes igjen, dermed må spilleren kun betale for den resterende fjerdedelen av muren).
 
 
 \subsubsection{Priser, helsepoeng og angrepsverdier}
