Glossary-endringer, samt fjerna vi, oss, vår

--- a/konseptdokument/intro.tex
+++ b/konseptdokument/intro.tex
@@ -5,7 +5,7 @@ medlemmene i gruppen har, og hvilke mål som ble satt med tanke på å
 utvikle et spillkonsept og en eventuell prototype.
 
 \subsection{Struktur}
-Dokumentet er i hovedsak strukturert i 3 deler:
+Dokumentet er i hovedsak strukturert i tre deler:
 \begin{enumerate}
 	\item Konsept og spillutforming (seksjon~\ref{sec:konsept})
 	\item Teknisk (seksjon~\ref{sec:teknisk})
@@ -28,7 +28,7 @@ Kjetil begynte sin spillkarriere med en \gls{Nintendo 64} i 1999. Da
 var det eventyr (se seksjon~\ref{sec:genre}) og rollespill som
 \gls{Legend of Zelda} og \gls{Banjo Kazooie} som
 stod i fokus. Da datamaskinen kom i hus gikk spillfokuset  over på
-konkurransespill som Counter-Strike og \gls{WC3}. Han har i hovedsak vært
+konkurransespill som \gls{Counter-Strike} og \gls{Warcraft III}. Han har i hovedsak vært
 en Nintendo~\gls{Fanboy}, men har i de senere år utvidet
 kolleksjonen til å omfatte Xbox.
 
@@ -36,15 +36,15 @@ kolleksjonen til å omfatte Xbox.
 I 1996 oppdaget Ina spillet \gls{Rayman} til PC og var fra den dag frelst for
 serien, men skiftet raskt konsoll til Playstation. For Ina har sjangeren
 plattform vært en klar favoritt gjennom årene og da hun senere fikk
-\gls{Game Boy} gikk tiden med til \gls{DKC2}. Etterhvert som årene har gått har hun skiftet mellom
+\gls{Game Boy} gikk tiden med til \gls{Donkey Kong Country 2}. Etterhvert som årene har gått har hun skiftet mellom
 Nintendo og Playstation, samt prøvd ut endel forskjellige sjangertyper,
-men Rayman og Donkey Kong seriene er og blir favoritter. 
+men Rayman- og Donkey Kong-seriene er og blir favoritter. 
 
 \item[Christian Aleksander Lysne (22), datateknikk, prosjektledelse] \hfill \\
 Christian var 8 år da han fikk sin første \gls{Nintendo 64}, med
 spillene \gls{Mario 64} og \gls{Mario Kart}.
-Senere gikk det i \gls{Legend of Zelda}  og \gls{SSBM}.
-\gls{Tekken} var også  populært i oppveksten. \gls{WC3} og
+Senere gikk det i \gls{Legend of Zelda}  og \gls{Super Smash Brothers}.
+\gls{Tekken} var også  populært i oppveksten. \gls{Warcraft III} og
 \gls{Diablo 2} tok etter hvert over, og spilles fortsatt i perioder.
 
 \item[Andreas Røysland Aarnes (25), geologi] \hfill \\
@@ -53,11 +53,11 @@ Som seksåring prøvde Andreas \gls{Super Mario World} på
 i 2011, da New Super Mario Bros. kom til
 \gls{Wii}, at han igjen ble tilfredstilt innen
 spillverdenen. I mellomtiden har han låst seg til strategispill-seriene
-\gls{WC3}, \gls{C and C} og Age of
+\gls{Warcraft III}, \gls{Command and Conquer} og Age of
 Empires. 
 
 \item[Trond Kjetil (25), informatikk] \hfill \\
-Trond Kjetil startet tidlig sin spillkarriere med Nintendo Entertainment System og Super Mario Bros. i 1990, knapt 4 år gammel. TV-spill var fra da av et fast inventar i hans fritidssysler. Senere kom maskiner som Game Boy, Nintendo 64 og PC. I dag spiller han helst førstepersonsskytere på PC, da helst Team Fortress 2 og Tribes Ascend.
+Trond Kjetil startet tidlig sin spillkarriere med \gls{NES} og Super Mario Bros. i 1990, knapt 4 år gammel. TV-spill var fra da av et fast inventar i hans fritidssysler. Senere kom maskiner som \gls{Game Boy}, \gls{Nintendo 64} og PC. I dag spiller han helst førstepersonsskytere på PC, da helst \gls{Team Fortress 2} og \gls{Tribes Ascend}.
 \end{description}
 
 \subsection{Gruppens kompetanse}
@@ -65,7 +65,7 @@ Trond Kjetil startet tidlig sin spillkarriere med Nintendo Entertainment System 
 Kjetil, Trond Kjetil og Christian er mennesker med bakgrunn fra datafaglig utdanning, henholdsvis datateknikk og informatikk fra NTNU og dataingeniør fra HiST. Disse tok derfor på seg oppgaven relatert til den tekniske implementasjonen av spillet.
 Ina har sin bakgrunn i bioteknologi fra NTNU, og Andreas' bakgrunn stammer fra petroleumsgeologi, også fra NTNU.
 Deres bakgrunn og faglige kompetanse kommer til syne i spillelementer integrert i spillet.
-Chistian studerer i dag Project Management, og vi kunne derfor ha benyttet oss av hans prosjektstryingskunnskaper. Da vi har valgt å holde gruppestrukturen så flat som mulig databakgrunnen, hvor hans hovedkompetanse ligger, blitt lagt mest vekt på.
+Chistian studerer i dag Project Management, og gruppen kunne derfor ha benyttet seg av hans prosjektstryingskunnskaper. Da det har blitt valgt å holde gruppestrukturen så flat som mulig har dog databakgrunnen hvor hans hovedkompetanse ligger blitt lagt mest vekt på.
 
 \subsection{Mål}
 Det overordnede målet for gruppen var å lage et spillkonsept hvert
@@ -93,9 +93,9 @@ Den valgte problemstillingen er gjengitt i sin helhet nedenfor.
 Denne problemstillingen gjør det mulig å flette inn kompetansen til de
 ulike medlemmene i spillet. De som har studert data får brukt
 kompetansen sin på et overordnet nivå når det gjelder selve utviklingen.
-Ved å ha med "gjenbruk og resirkulering" kan vi lage et spill med
+Ved å ha med "gjenbruk og resirkulering" kan en lage et spill med
 grunnlag i biologiske og kjemiske prosesser. I tillegg åpner det opp for å
-ha med spillelementer basert på mineraler og ressurser, som vi har
+ha med spillelementer basert på mineraler og ressurser, som gruppen har
 kompetanse på gjennom geologiutdanning.
 \subsection{Prosessen}
 Denne seksjonen forteller hvordan konseptet ble til ved å gå fra en
@@ -110,7 +110,7 @@ interessante. Gruppen følte seg ikke veldig bundet av den opprinnelige
 problemstillingen, og eksperimenterte derfor med forskjellige ideer.
 Gitt problemstillingen i seksjon~\ref{sec:problemstilling} var det
 naturlig å tenke på et spill som var turbasert eller sanntidsspill med
-flere spillere. Det stod også sentralt å bruke hele gruppens kompentanse. Ettersom tre av gruppens medlemmer har god datakunnskap var det essensielt å flette inn biologi og geologi i konseptet. Med fokus rundt dette skapte vi vår første idé.
+flere spillere. Det stod også sentralt å bruke hele gruppens kompentanse. Ettersom tre av gruppens medlemmer har god datakunnskap var det essensielt å flette inn biologi og geologi i konseptet. Med fokus rundt dette ble den første ideen skapt.
 \begin{description}
 \item[Energispillet med flerspillermodus] \hfill\\
 Spillere skal organisere hver sin lille by, hvor fokuset er å forhandle
