--- a/konseptdokument/glossaries.tex
+++ b/konseptdokument/glossaries.tex
@@ -98,7 +98,7 @@ Nintendo i 1986
 \dictentry{Team Fortress 2}{
 	Lagbasert førstepersonsskytespill utgitt av Valve Corporation i 2007
 }
-\dictentry{Tribes: Ascend}{
+\dictentry{Tribes Ascend}{
 	Lagbasert førstepersonsskytespill utgitt av Hi-Rez i 2012
 }
 
