--- a/konseptdokument/concept.tex
+++ b/konseptdokument/concept.tex
@@ -34,7 +34,7 @@ dynamikk.
 
 %Før vi endte opp med sanntidsstrategisjangeren vurderte vi imidlertid en rekke andre mulige sjangre for realiseringen av konseptet. Spesielt eventyr- og rollespillsjangeren ble sterkt vurdert.
 
-Under vil vi beskrive en rekke sjangre som ble vurdert for realiseringen av \emph{Garbage Alert}. Legg dog merke til at navnet ble til en tid etter at sjangeren var valgt.
+Under vil det bli beskrivet en rekke sjangre som ble vurdert for realiseringen av \emph{Garbage Alert}. Legg dog merke til at navnet ble til en tid etter at sjangeren var valgt.
 
 \subsubsection{Eventyr}
 Den første sjangeren som ble vurdert som utgangspunkt for realisering av
@@ -69,7 +69,7 @@ Der finnes en hel rekke undersjangre under eventyrsjangeren. Av spesiell interes
 
 
 \subsubsection{Strategi}
-Den andre sjangeren som ble vurdert for å realisere ideen om et resirkulering- og gjenbruksspill var strategisjangeren. Sentralt i denne sjangeren er ressursforvaltning, noe vi og følte kunne brukes for å realisere et godt konsept.
+Den andre sjangeren som ble vurdert for å realisere ideen om et resirkulering- og gjenbruksspill var strategisjangeren. Sentralt i denne sjangeren er ressursforvaltning, noe som også kunne brukes for å realisere et godt konsept.
 
 \begin{description}
 
@@ -79,7 +79,7 @@ Den andre sjangeren som ble vurdert for å realisere ideen om et resirkulering- 
 
 	Den observante leser vil kunne legge merke til at dette ikke er ulikt tradisjonelle brettspill, noe som tilkjennegis ved at mange av de første digitale strategispill var konverteringer av tradisjonelle brettspill.
 
-	Av populære turbaserte strategispill finner vi \emph{Firaxis'} \emph{Sid Meier's Civilization} og \emph{Intelligent Systems'} \emph{Advance Wars}. % TODO: Kilder?
+	Av populære turbaserte strategispill finnes \emph{Firaxis'} \emph{Sid Meier's Civilization} og \emph{Intelligent Systems'} \emph{Advance Wars}. % TODO: Kilder?
 
 
 	\item[Sanntidsstrategi] \hfill \\
@@ -88,12 +88,12 @@ I motsetning til turbaserte strategispill vil ikke hver spiller ha sin egen tur 
 
 Blant de mer sentrale elementer ved sanntidsstrategispill er konseptene om ressurshåndtering. De fleste spill i denne sjangeren lar det være opp til brukeren å passe på at man til enhver tid har adekvate ressurser til å gjøre den en ønsker og å benytte seg av de rasjonelt. Et annet element som ofte er til stede er stein-saks-papir-balansering av enheter, hvor enhet A kontrer enhet B, B kontrer enhet C og enhet C kontrer enhet A.
 
-	Av populære sanntidsstrategispill finner vi \emph{StarCraft} og \emph{Command \& Conquer}.
+	Av populære sanntidsstrategispill finnes \emph{StarCraft} og \emph{Command \& Conquer}.
 
 \end{description}
 
 \subsubsection{Vårt valg}
-Helt i starten av prosessen som førte til Garbage Alert, begynte vi med å diskutere ulike typer eventyr-tilnærminger. Det føltes svært naturlig, i et spill som skal omhandle resirkulering og gjenbruk, å låne elementer fra den sjangeren som oftest benytter slike mekanismer. Enkelte gruppemedlemmer ønsket dog en mer fartsfull opplevelse, og diskusjoner om å implementere Zelda-aktige elementer i spillet ble tatt opp.
+Helt i starten av prosessen som førte til Garbage Alert, begynte diskusjonen rundt ulike typer eventyr-tilnærminger. Det kan føles svært naturlig, i et spill som skal omhandle resirkulering og gjenbruk, å låne elementer fra den sjangeren som oftest benytter slike mekanismer. Enkelte gruppemedlemmer ønsket dog en mer fartsfull opplevelse, og diskusjoner om å implementere Zelda-aktige elementer i spillet ble tatt opp.
 
 Samtidig ble en alternativ idé utforsket, i kraft av at enkelte ønsket å inkorporere flerspiller og konkurranse som en motivasjonsfaktor. Her startet ideen med å skape et brettspill-inspirert spill. Denne ideen utviklet seg fra å være et svært komplisert turbasert spill, til å bli stadig enklere og raskere, for til slutt å bli et sanntidsstrategispill.
 
@@ -156,7 +156,7 @@ Når en øy er helt overfylt med søppel vil den synke ned i havet. Dette gjør 
 
 \subsection{Gameplay og taktikker}
 
-I dette avsnittet tar vi for oss et typisk spill, spilt av tre deltakere som alle bruker forskjellige taktikker. De forskjellige taktikkene er basert på alfa-testing utført av Re3. Hver taktikk vil få en kort beskrivelse hvor fordeler og ulemper vil bli nevnt. Antall ressurser og helsepoeng vil ikke gis i detalj.
+Dette avsnittet vil ta for seg et typisk spill, spilt av tre deltakere som alle bruker forskjellige taktikker. De forskjellige taktikkene er basert på alfa-testing utført av Re3. Hver taktikk vil få en kort beskrivelse hvor fordeler og ulemper vil bli nevnt. Antall ressurser og helsepoeng vil ikke gis i detalj.
 
 De tre deltakerne i spillet er: \emph{Professor}; \emph{MadMax}; og \emph{N00b87}. Spillet starter og hver spiller ser på en mørk øy fylt til randen av søppel. Det er en dyster og melankolsk stemning, og man får en følelse av at man har reist fram i tid til et post-apokalyptisk samfunn.
 
@@ -270,7 +270,7 @@ Fra denne skjermen er det mulig å starte spillet ved å trykke på den store kn
 En komplett versjon av spillet vil gi spilleren flere valg på introskjermen, som å endre spillernavn, samt gi muligheten til å koble flere spillere sammen i et flerspillerspill.
 
 
-Spillets hovedskjerm\footnote{Den delen av spillet hvor spillet faktisk spilles.} består av et overblikksbilde av alle øyene som er med i spillet. I prototypen er antallet begrenset til to, men en mer moden versjon vil inneholde muligheten til å spille flere enn to stykker samtidig. En skiller mellom seg selv og andre ved bruk av ulike farger på spillernes miljøstasjon, våpen og forsvar. I prototypen har vi valgt å fargelegge de to faksjonene rød og blå.
+Spillets hovedskjerm\footnote{Den delen av spillet hvor spillet faktisk spilles.} består av et overblikksbilde av alle øyene som er med i spillet. I prototypen er antallet begrenset til to, men en mer moden versjon vil inneholde muligheten til å spille flere enn to stykker samtidig. En skiller mellom seg selv og andre ved bruk av ulike farger på spillernes miljøstasjon, våpen og forsvar. I prototypen er de to faksjonene farget rød og blå.
 
 I prototypen er hovedskjermen et statisk fugleperspektiv av alle øyene og alle spillets elementer. En ferdig versjon vil også inneholde muligheten til å veksle mellom et detaljbilde av spillerens egen øy og et overblikksbilde over alle øyer. Hvorvidt dette vil gjøres via en knapp som veksler mellom de to visningsmodi eller om en vil ''klype for å zoome'' er på dette stadiet noe uvisst og bør testes via brukertesting for å finne den optimale metoden.
 
@@ -278,4 +278,4 @@ Garbage Alert er tenkt å først og fremst spilles på mobiltelefoner og andre e
 
 Spillet kan også spilles på en datamaskin i en nettleser, og en kan derfor også bruke en musepeker for å trykke på elementene på samme måte.
 
-Merk at da vi under utviklingen kun har testet prototypen på en dataskjerm er ikke spillet per nå tilpasset mobiltelefoner i så stor grad som det burde være. Enkle tester på mobiltelefon har dog blitt gjort, men har vært nedprioritert grunnet tidspress.
+Merk at det under utviklingen kun er testet en prototype på en dataskjerm, og spillet er per nå ikke  tilpasset mobiltelefoner i like stor grad som det burde være. Enkle tester på mobiltelefon har dog blitt utført, men har vært nedprioritert grunnet tidspress.
