--- a/konseptdokument/concept.tex
+++ b/konseptdokument/concept.tex
@@ -110,9 +110,9 @@ intelligens. Hver spiller starter med en øy og følgende elementer:
 	\item 10 enheter med papp i inventaret
 	\item 1000 enheter med søppel
 	\item Muligheten til å gjenvinne papp fra søppelet. Gjenvinningsgraden er 10\%
-	\item Muligheten til å bruke papp til å bygge våpen (papirfly) og forsvar (pappmur)
+	\item Muligheten til å bruke papp til å bygge våpen og forsvar, i form av papirfly og pappmur
 	\item Muligheten til å oppgradere gjenvinningsgraden til 20\%
-	\item Muligheter for oppgraderinger av gjenvinningsstasjon slik at man også får gjenvinnet plast eller tre.
+	\item Muligheter for oppgraderinger av gjenvinningsstasjon slik at man også får gjenvunnet plast eller tre.
 \end{itemize}
 
 Jo flere typer ressurser man får gjenvunnet fra søppelet, jo flere muligheter har man for mer avanserte våpen, forsvar og oppgraderinger (se seksjon \ref{sec:spillelement}).
@@ -123,14 +123,14 @@ Jo flere typer ressurser man får gjenvunnet fra søppelet, jo flere muligheter 
 
 \subsection{Globale og lokale katastrofer}\label{sec:hazards}
 
-I den virkerlige verden har søppel innvirkning på det lokale og globale miljøet. Slik er det også i Garbage Alert – jo mer søppel som blir kastet frem og tilbake mellom spillerne, jo høyere blir risikoen for at en katastrofe inntreffer. Spillere som har brukt våpnene mye via ha en høy risiko for at en lokal katastrofe inntreffer. Dette gjør at spillet har en høyere vanskeligehetsgrad for de spillerne som ligger godt an sett i forhold til motspillerne. Denne formen for dynamisk vanskelighetsbalansering gjør det slik at en kan hente seg inn igjen selv om en kanskje gjør det litt dårlig i starten.
+I den virkerlige verden har søppel innvirkning på det lokale og globale miljøet. Slik er det også i Garbage Alert – jo mer søppel som blir kastet frem og tilbake mellom spillerne, jo høyere blir risikoen for at en katastrofe inntreffer. Spillere som har brukt våpnene mye vil ha en høy risiko for å bli rammet av en lokal katastrofe. Dette gjør at spillet har en høyere vanskeligehetsgrad for de spillerne som ligger godt an sett i forhold til motspillerne. Denne formen for dynamisk vanskelighetsbalansering gjør det slik at en kan hente seg inn igjen selv om en kanskje gjør det litt dårlig i starten.
 
 Den totale våpenkraften som har blitt brukt av alle spillerne er med på å øke sannsynligheten for globale katastrofer. Hver spiller vil ha to måleinstrument på panelet sitt på skjermen som viser sannsynligheten for at en geologisk eller en biologisk katastrofe kan inntreffe, såkalte geohasarder og biohasarder.
 
 
 \subsubsection{Geohasarder}
 Geologiske katastrofer kan intreffe som et resultat av global oppvarmning og mekanisk påvirkning fra mennesker.
-Et eksempel på en global geologisk katastrofe som kan intreffe er tsunamier. En tsunami vil gjøre skade på den eventuelle muren spilleren har og muligens også ødelegge våpen og miljøstasjon utover dette. Hvorvidt dette skjer vil bero på murens styrke (som i sin tur beror på murens byggemateriale) og resterende helsepoeng. Eksempler på lokale geologiske katastrofer er jordskjelv og kolliderende isfjell. Jordskjelv gjør en liten skade på alle bygninger på øyen. Isfjellet vil kollidere i muren og gjøre en viss skade på den og muligens ødelegge den avhengig av murens styrke. 
+Et eksempel på en global geologisk katastrofe som kan inntreffe er tsunamier. En tsunami vil gjøre skade på den eventuelle muren spilleren har og muligens også ødelegge våpen og miljøstasjon utover dette. Hvorvidt dette skjer vil bero på murens styrke, som i sin tur beror på murens byggemateriale, og resterende helsepoeng. Eksempler på lokale geologiske katastrofer er jordskjelv og kolliderende isfjell. Jordskjelv gjør en liten skade på alle bygninger på øyen, og et isfjell som kolliderer med øya vil gjøre skade på muren, og muligens ødelegge den avhengig av murens styrke. 
 
 % Si noe om at disse elementene ikke er ferdige?
 
