--- a/konseptdokument/spillelement.tex
+++ b/konseptdokument/spillelement.tex
@@ -100,13 +100,13 @@ En spiller som har en type mur, kan oppgradere muren til en bedre mur. En slik o
 
 
 \subsubsection{Reparasjoner}
-Både mur, våpen og miljøstasjon kan repareres. Prisen på en reparasjon tar et prosentvis utgangspunkt i prisen på en ny bygning. I tillegg antas det at 50\% av den ødelagte delen av bygningen kan gjenbrukes. Eksempelvis så kan en mur som har mistet halvparten av helsepoengene sine repareres for 25\% av prisen på en ny mur (halvparten av de ødelagte materialene kan brukes igjen, dermed må spilleren kun betale for den resterende fjerdedelen av muren).
+Både mur, våpen og miljøstasjon kan repareres. Prisen på en reparasjon tar et prosentvis utgangspunkt i prisen på en ny bygning. I tillegg antas det at 50\% av den ødelagte delen av bygningen kan gjenbrukes. Eksempelvis så kan en mur som har mistet halvparten av helsepoengene sine repareres for 25\% av prisen på en ny mur. Her vil halvparten av de ødelagte materialene kunne brukes igjen, dermed må spilleren kun betale for den resterende fjerdedelen av muren.
 
 
 \subsubsection{Priser, helsepoeng og angrepsverdier}
 Under utviklingen og alfa-testingen av spillet har Re³ kommet frem til en prisliste, helsepoeng på våpen, mur og miljøstasjon samt attack-verdier for våpnene.
 
-Prislisten er utviklet slik at det hele tiden er knapt med ressurser. Det vil si at nesten alle bygninger og oppgraderinger koster noe papp, osv, for at denne ressursen ikke hoper seg opp. Utkastet av prislisten finnes i appendiks \ref{A}.
+Prislisten er utviklet slik at det hele tiden er knapt med ressurser. Det vil si at nesten alle bygninger og oppgraderinger blant annet koster noe papp, for at denne ressursen ikke skal hope seg opp. Utkastet av prislisten finnes i appendiks \ref{A}.
 
-Tanken bak helsepoengene og angrepsverdiene er at to angrep av et type våpen ødelegger en mur bygget av samme ressurs som våpenet. Det vil si at to angrep fra en katapult ødelegger en tremur. Et våpen som er et nivå høyere enn forsvaret vil ødelegge 90\% av muren. Dersom angrepet er to nivå (eller mer) høyere enn forsvaret vil muren bli ødelagt i tillegg til at våpen/miljøstasjon vil ta skade. Et komplett utkast over helsepoeng og angrepsverdier finnes i appendiks \ref{B}. Disse verdiene er dog det mest usikre med denne prototypen, og er noe som må justeres gjennom mye utprøving.
+Tanken bak helsepoengene og angrepsverdiene er at to angrep med et type våpen ødelegger en mur bygget av samme ressurs som våpenet. Det vil si at to angrep fra en katapult ødelegger en tremur. Et våpen som er et nivå høyere enn forsvaret vil ødelegge 90\% av muren. Dersom angrepet er minimum to nivå høyere enn forsvaret vil muren bli totalødelagt i tillegg til at våpen, og videre miljøstasjon, vil ta skade. Et komplett utkast over helsepoeng og angrepsverdier finnes i appendiks \ref{B}. Disse verdiene er dog det mest usikre med denne prototypen, og er noe som må justeres gjennom mye utprøving.
 
