added some more info

--- a/konseptdokument/artwork.tex
+++ b/konseptdokument/artwork.tex
@@ -8,7 +8,10 @@ Den grafiske fremstillingen i spillet er ment å være leken og rettet mot
 barn i alle aldre, og er sterkt inspirert av den klassiske spillserien
 Advance Wars. Videre har det å holde ting oversiktlig og stort nok til å
 trykkes på en berøringsskjerm vært noe vi har hatt spesielt i tankene
-når grensesnittet har blitt utformet.
+når grensesnittet har blitt utformet. Det er lagt mer vekt på
+funksjonalitet, enn selve fremstillingen på denne delen av stadiet. Av
+skjermskuddene ser en to forskjellige spillere som spiller mot
+hverandre.
 
 \begin{figure} [H]
 \centering
@@ -51,12 +54,12 @@ når grensesnittet har blitt utformet.
 \caption{Miljøstasjonens effektivitet kan oppgraderes slik at den gjenvinner mer materialer fra hver avfallsenhet.}
 \label{fig:OppgradereEnv}
 \end{figure}
-
-
 Legg merke til at disse skjermskuddene er tatt av en veldig tidlig
-prototype som har hatt forkus på å implementere så mye av den tenkte
+prototype som har hatt fokus på å implementere så mye av den tenkte
 funksjonaliteten som mulig, heller enn å etablere et konsistent grafisk
 uttrykk. Det var ønskelig å benytte så mye som mulig av den kode og
 grafikk som ble til i vår tidlige prototype videre i den mer avanserte
 prototypen\footnote{Noen vil kanskje si at dette ble gjort i tråd med
-landsbyens filosofi om gjenbruk og gjenvinning.}.
+landsbyens filosofi om gjenbruk og gjenvinning.}. Mot en sluttfase vil
+det være naturlig å erstatte eksempelgrafikken med noe grafikk som er
+mer polert.
