Skrevet mer om vår iterative prosess

--- a/konseptdokument/intro.tex
+++ b/konseptdokument/intro.tex
@@ -93,17 +93,24 @@ Den valgte problemstillingen er gjengitt i sin helhet nedenfor.
 Denne problemstillingen gjør det mulig å flette inn kompetansen til de
 ulike medlemmene i spillet. De som har studert data får brukt
 kompetansen sin på et overordnet nivå når det gjelder selve utviklingen.
-Ved å ha med "gjenbruk og resirkulering" kan en lage et spill med
+Ved å ha med ''gjenbruk og resirkulering'' kan en lage et spill med
 grunnlag i biologiske og kjemiske prosesser. I tillegg åpner det opp for å
 ha med spillelementer basert på mineraler og ressurser, som gruppen har
 kompetanse på gjennom geologiutdanning.
+
+
+
 \subsection{Prosessen}
 Denne seksjonen forteller hvordan konseptet ble til ved å gå fra en
-problemstilling, til en idé og til slutt et konsept. Den første delen av
-denne prosessen var ikke iterativ, ettersom gruppen i praksis gikk fra
-en vagt definert problemstilling, til en idé, for så å redefinere ideen
-for å bedre passe den valgte problemstillingen. Prosessen gikk deretter
-fra idé til konsept. 
+problemstilling, til en idé og til slutt et konsept. Det ble benyttet en iterativ arbeidsmetode, hvor en hele tiden hadde fokus på å 
+
+Her vil en dele opp arbeidet i mindre deler en raskt kan fullføre, for videre å teste ut disse elementene for å se hva som fungerer bra og hva som fungerer mindre bra. I praksis vil dette si at gruppen raskt skapte en spillbar prototype hvor ting ble prøvd ut, for så å iterativt utvide denne til stadig mer avanserte prototyper basert på erfaringene gruppen gjorde seg underveis.
+
+Den største fordelen ved å gjøre det på denne måten er at en raskt kan justere ens kurs og retning basert på erfaringer man gjør seg opp. 
+Den største bakdelen med denne metodikken er at en raskt skaper en del kode og gjør en del arbeid for å skape en enkel prototype som ikke kan brukes videre.
+I forhold til dette faget hvor målet var å produsere en enkel prototype var denne metodikken svært passende, spesielt da det er mulig å hele tiden er mulig å fryse utviklingen når prototypen er ''avansert nok''.
+
+Den første delen av prosessen var allikevel ikke utført iterativ, ettersom gruppen i praksis gikk fra en vagt definert problemstilling, til en idé, for så å redefinere ideen for å bedre passe den valgte problemstillingen. Prosessen gikk deretter fra idé til konsept.
 \subsubsection{Fra problemstilling til idé}
 Det ble brukt mye tid på å utforske forskjellige ideer som var
 interessante. Gruppen følte seg ikke veldig bundet av den opprinnelige
