retting teknisk del

--- a/konseptdokument/tech.tex
+++ b/konseptdokument/tech.tex
@@ -34,7 +34,7 @@ presentasjon, for å realisere den endelige protoypen.
 Garbage Alert-prototypen slik den er i dag er implementert med de nye
 web-teknologiene (noe unøyaktig) kjent som HTML5. Mer nøyaktig vil dette
 si at spillet er implementert med et \texttt{<canvas>} element, et lite
-"malebrett" som en kan tegne på programmatisk med JavaScript. Dette
+"malebrett'' som en kan tegne på programmatisk med JavaScript. Dette
 medfører at Garbage Alert i prinsippet kan kjøres hvor som helst der en
 har en moderne nettleser med støtte for JavaScript. Garbage Alert har
 moderne berøringsbaserte mobiltelefoner som hovedplattform, hvor slik
@@ -90,14 +90,14 @@ seksjon~\ref{sec:artwork}.
 
 
 \subsubsection{Programmeringsinnhold og kodestruktur}
-Som nevnt over er spillet programmert i JavaScript fra grunnen, av uten
-hjelp av eksisterenede hjelperammeverk. Dette er dels fordi
+Som nevnt over er spillet programmert i JavaScript fra grunnen, uten
+hjelp av eksisterenede rammeverk. Dette er dels fordi
 implementasjonen av spillet er tenkt å være enkel, samt at slike
 rammeverk er noe umodne.  Logisk kodestruktur og -arkitektur har ikke
 vært noe som har blitt tenkt mye på, og kun enkle grep har blitt gjort
 for å gjøre koden noe enklere å skrive. Dette gjelder spesielt den koden
 som har blitt arvet fra den tidligere prototypen, kode som med god grunn
-kan omtales som et "lappeteppe".
+kan omtales som et ''lappeteppe''.
 
 For å øke spillets modifiserbarhet og kodens lesbarhet er de ulike
 elementene i spillet delt inn i egne JavaScript-filer. Dette for å
@@ -105,7 +105,7 @@ logisk samle metoder og funksjoner. I en ferdig versjon vil disse filene
 samles i én enkelt fil for å gjøre eksempelvis innlastingstiden bedre.
 
 Spillets bilder og figurer finnes i en egen mappe. På samme måte som med
-JavaScript-filene vil en i den ferdige versjonen ha salle bildene i én
+JavaScript-filene vil en i den ferdige versjonen ha alle bildene i én
 større bildefil for å forbedre innlastingstiden.
 
 
@@ -118,7 +118,7 @@ enkelt av de ulike mobiltelefonoperativsystemene.}, noe som i
 begynnelsen var tanken. Dette ble gått bort fra da ikke alle på gruppen
 hadde de nødvendige verktøyene for å utvikle til
 plattformen\footnote{Der behøves en Apple Mac og en utviklerlisens, noe
-kun ett menneske på gruppa har.}. Da falt valget på å implementere
+kun ett medlem av gruppa har.}. Da falt valget på å implementere
 spille med web-teknologi. Dette førte med seg at flere kunne bidra til
 programmeringen både i kraft av at flere har erfaring med JavaScript
 fra før og at alle er i besittelse av de verktøy som behøves.
