lagt til bilde i prosessrap

--- a/prosessrapport/hoveddel.tex
+++ b/prosessrapport/hoveddel.tex
@@ -114,6 +114,15 @@ Som datastudenter med programmeringserfaring er det alltid en overhengende fare 
 
 
 Ulike synspunkt og meninger, i tillegg til ulik faglig kompetanse og tankegang, førte til et resultat ingen på gruppen så for seg i starten, men som alle var meget fornøyde med. Vi klarte med andre ord å dra nytte av synergieffektene som kommer av vår ulikheter.
+
+\begin{figure} [here]
+	\begin{center}
+			\includegraphics[width=\textwidth]{images/processing.jpg}
+	\end{center}
+	\caption{Gruppen arbeider med programmering av prototypen og visuelt design}
+	\label{fig:gruppe}
+\end{figure}
+
 \cleardoublepage
 
 \section{De Bonos hatter} %gruppelogg 14.03
