Fixed some layout and added some text

--- a/konseptdokument/artwork.tex
+++ b/konseptdokument/artwork.tex
@@ -13,6 +13,15 @@ funksjonalitet, enn selve fremstillingen på denne delen av stadiet. Av
 skjermskuddene ser en to forskjellige spillere som spiller mot
 hverandre.
 
+Som en ser av figur~\ref{fig:Oppgradering} kan spilleren på dette
+tidspunktet kun oppgradere til plast. Dette er med andre ord i en tidlig
+fase av spillet. Tilgjengelige ressurser er vist i bunnen av
+skjermskuddet, og på dette tidspunktet kan miljøstasjonen kun gjenvinne
+plast.
+
+På figur~\ref{fig:Eksplosjon} har den blå spilleren angrepet den røde
+spilleren, og man ser effekten av dette i eksplosjonen.
+
 \begin{figure} [H]
 \centering
 \includegraphics[width=\textwidth]{images/Oppgradering.png}
@@ -20,28 +29,28 @@ hverandre.
 \label{fig:Oppgradering}
 \end{figure}
 
-\begin{figure} [H]
+\begin{figure}
 \centering
 \includegraphics[scale=0.5]{images/Eksplosjon.png}
 \caption{Ved et angrep på en annen spiller vil et projektil avfyres og eksplodere på motspillerens eventuelle forsvarsstruktur.}
 \label{fig:Eksplosjon}
 \end{figure}
 
-\begin{figure} [H]
+\begin{figure}
 \centering
 \includegraphics[scale=0.5]{images/OppgradereMur.png}
 \caption{Spillerens forsvarsstruktur kan oppgraderes til å håndtere sterkere skyts fra motspilleren, avhengig av tilgjengelige ressurser.}
 \label{fig:OppgradereMur}
 \end{figure}
 
-\begin{figure} [H]
+\begin{figure}
 \centering
 \includegraphics[scale=0.5]{images/Tsunami.png}
 \caption{Globale geohasarder kan oppstå som følge av mye global forsøpling, som for eksempel en tsunami.}
 \label{fig:Tsunami}
 \end{figure}
 
-\begin{figure} [H]
+\begin{figure} 
 \centering
 \includegraphics[scale=0.7]{images/Kolera.png}
 \caption{Lokale biohasarder kan oppstå som følge av mye lokal forurensning. Her er et sykdomsutbrudd.}
@@ -50,10 +59,14 @@ hverandre.
 
 \begin{figure} [H]
 \centering
-\includegraphics[scale=0.7]{images/OppgradereEnv.png}
+\includegraphics{images/OppgradereEnv.png}
 \caption{Miljøstasjonens effektivitet kan oppgraderes slik at den gjenvinner mer materialer fra hver avfallsenhet.}
 \label{fig:OppgradereEnv}
 \end{figure}
+
+På figur~\ref{fig:OppgradereEnv} har den røde spilleren åpnet
+oppgraderingsmenyen sin. Her har han mulighet til å oppgradere
+effektiviteten av miljøstasjonen sin.
 
 Legg merke til at disse skjermskuddene er tatt av en veldig tidlig
 prototype som har hatt fokus på å implementere så mye av den tenkte
