Split conclusion into summary etc

--- a/konseptdokument/report.tex
+++ b/konseptdokument/report.tex
@@ -82,6 +82,8 @@
 \include{artwork}
 \cleardoublepage
 \include{conclusion}
+\cleardoublepage
+\include{summary}
 \thispagestyle{empty}
 \bibliographystyle{plain}
 \bibliography{referanser}
