Mer om prosessen

--- a/konseptdokument/appendiks.tex
+++ b/konseptdokument/appendiks.tex
@@ -17,3 +17,11 @@
 				\end{center}
 				\caption{Utkast over helsepoeng (hitpoints) og angrepsverdier (attack)}
 			\end{figure}
+
+\section{Gantt-diagram} \label{app:Gantt}
+	\begin{figure} [H]
+		\begin{center}
+		\includegraphics[width=\textwidth, angle=90]{images/EiTGantt}
+		\caption{Gantt-diagram}
+		\end{center}
+	\end{figure}
