--- a/konseptdokument/intro.tex
+++ b/konseptdokument/intro.tex
@@ -1,3 +1,4 @@
+%!TEX root = report.tex
 \section{Introduksjon}\label{sec:intro}
 Dette avsnittet skal gi et kort overblikk over hvordan resten av
 dokumentet er strukturert, hvilke tidligere erfaringer hver av
@@ -101,14 +102,17 @@ kompetanse på gjennom geologiutdanning.
 
 
 \subsection{Prosessen}
-Denne seksjonen forteller hvordan konseptet ble til ved å gå fra en
-problemstilling, til en idé og til slutt et konsept. Det ble benyttet en iterativ arbeidsmetode, hvor en hele tiden hadde fokus på å 
-
-Her vil en dele opp arbeidet i mindre deler en raskt kan fullføre, for videre å teste ut disse elementene for å se hva som fungerer bra og hva som fungerer mindre bra. I praksis vil dette si at gruppen raskt skapte en spillbar prototype hvor ting ble prøvd ut, for så å iterativt utvide denne til stadig mer avanserte prototyper basert på erfaringene gruppen gjorde seg underveis.
+Denne seksjonen forteller hvordan konseptet ble til ved å gå fra en problemstilling, til en idé og til slutt et konsept. For utvikling og realisering av konsepte ble benyttet en iterativ og smidig arbeidsmetode\cite{online:agile_manifesto} basert på Scrum-metodikken\cite{Scrum}. Her vil en dele opp arbeidet i mindre, mer håndterlige deler en raskt kan fullføre, for videre å teste ut disse elementene for å se hva som fungerer bra og hva som fungerer mindre bra. I praksis vil dette si at gruppen raskt skapte en spillbar prototype hvor ting ble prøvd ut, for så å iterativt utvide denne til stadig mer avanserte prototyper basert på erfaringene gruppen gjorde seg underveis.
 
 Den største fordelen ved å gjøre det på denne måten er at en raskt kan justere ens kurs og retning basert på erfaringer man gjør seg opp. 
 Den største bakdelen med denne metodikken er at en raskt skaper en del kode og gjør en del arbeid for å skape en enkel prototype som ikke kan brukes videre.
 I forhold til dette faget hvor målet var å produsere en enkel prototype var denne metodikken svært passende, spesielt da det er mulig å hele tiden er mulig å fryse utviklingen når prototypen er ''avansert nok''.
+
+
+En enkelt Gantt-diagram (se appendiks \ref{app:Gantt}) ble produsert for å prøve å ha en viss oversikt over hva som burde og hva som må være ferdig til gitte tider, samt overslag over hvor lang tid ting vil ta.
+Morgenmøter ble holdt på starten av hver onsdag, hvor gruppens medlemmer forteller om hva de har gjort siden sist og hva de planlegger å gjøre fram til neste morgenmøte. Dette for å sørge for at alle til enhver tid var oppdaterte på hva som skjer og må gjøres framover.
+Allikevel, på grunn av at gruppen til enhver tid jobbet tett sammen, var det en jevn flyt av informasjon angående hva som skjer gjennom hele dagen.
+
 
 Den første delen av prosessen var allikevel ikke utført iterativ, ettersom gruppen i praksis gikk fra en vagt definert problemstilling, til en idé, for så å redefinere ideen for å bedre passe den valgte problemstillingen. Prosessen gikk deretter fra idé til konsept.
 \subsubsection{Fra problemstilling til idé}
