--- a/konseptdokument/referanser.bib
+++ b/konseptdokument/referanser.bib
@@ -33,3 +33,26 @@ Management},
 	Title={Fundamentals of Game Design, Prentice Hall},
 	Year=2006
 }
+
+@online{online:agile_manifesto,
+	author = {Kent Beck and
+	 Mike Beedle and 
+	 Arie van Bennekum and
+	 Alistair Cockburn and
+	 Ward Cunningham and
+	 Martin Fowler and
+	 James Grenning and
+	 Jim Highsmith and
+	 Andrew Hunt and
+	 Ron Jeffries and
+	 Jon Kern and
+	 Brian Marick and
+	 Robert C. Martin and
+	 Steve Mellor and
+	 Ken Schwaber and
+	 Jeff Sutherland and
+	 Dave Thomas},
+	 year = 2001,
+	 title = {Manifesto for Agile Software Development},
+	url = {\url{http://agilemanifesto.org/}}
+}
