--- a/konseptdokument/intro.tex
+++ b/konseptdokument/intro.tex
@@ -86,15 +86,15 @@ Det ble også ytret ønske om at spillmekanikken skulle foregå både på et
 mikroskopisk nivå (lokalt) og makroskopisk nivå (globalt). Ved å
 deretter bake inn grunnstenene — resirkulering og
 gjenbruk — ble problemstillingen forfattet.
-\subsubsection{Problemstillingen}\label{sec:problemstilling}
+\subsubsection{Problemstillingen}
 Den valgte problemstillingen er gjengitt i sin helhet nedenfor.
 \begin{quotation}
-\large\emph{"\input{../problemstilling}"}
+\large\emph{``\input{../problemstilling}"}
 \end{quotation}
 Denne problemstillingen gjør det mulig å flette inn kompetansen til de
 ulike medlemmene i spillet. De som har studert data får brukt
 kompetansen sin på et overordnet nivå når det gjelder selve utviklingen.
-Ved å ha med ''gjenbruk og resirkulering'' kan en lage et spill med
+Ved å ha med ``gjenbruk og resirkulering'' kan en lage et spill med
 grunnlag i biologiske og kjemiske prosesser. I tillegg åpner det opp for å
 ha med spillelementer basert på mineraler og ressurser, som gruppen har
 kompetanse på gjennom geologiutdanning.
@@ -106,7 +106,7 @@ Denne seksjonen forteller hvordan konseptet ble til ved å gå fra en problemsti
 
 Den største fordelen ved å gjøre det på denne måten er at en raskt kan justere ens kurs og retning basert på erfaringer man gjør seg opp. 
 Den største bakdelen med denne metodikken er at en raskt skaper en del kode og gjør en del arbeid for å skape en enkel prototype som ikke kan brukes videre.
-I forhold til dette faget hvor målet var å produsere en enkel prototype var denne metodikken svært passende, spesielt da det er mulig å hele tiden er mulig å fryse utviklingen når prototypen er ''avansert nok''.
+I forhold til dette faget hvor målet var å produsere en enkel prototype var denne metodikken svært passende, spesielt da det er mulig å hele tiden er mulig å fryse utviklingen når prototypen er ``avansert nok''.
 
 
 En enkelt Gantt-diagram (se appendiks \ref{app:Gantt}) ble produsert for å prøve å ha en viss oversikt over hva som burde og hva som må være ferdig til gitte tider, samt overslag over hvor lang tid ting vil ta.
@@ -144,7 +144,7 @@ videre:
 \subsubsection{Redefinering av ideen}
 Den opprinnelige ideen utviklet seg dermed til et rent konkurransespill,
 med mindre fokus på sanking og utvinning, og mer fokus på gjenbruk av ressurser. 
-Det ble bestemt at hver øy skal starte som en "søppeløy", og målet til
+Det ble bestemt at hver øy skal starte som en ``søppeløy", og målet til
 spilleren er å fjerne alt søppelet på sin øy.  Ressurser blir anskaffet
 ved å resirkulere søppelet på øya. Ved å legge inn denne varianten ble
 ideen mer konform med problemstillingen. Energispillet med
