--- a/konseptdokument/spillelement.tex
+++ b/konseptdokument/spillelement.tex
@@ -41,9 +41,11 @@ Det er også mulig å skade forsvar og våpen som er bygget av en bedre ressurs 
 \end{figure}
 
 \subsubsection{Ressursgjenvinning}
-Spillere skaffer seg ressurser ved å gjenvinne søppel som ligger
-spredt rundt på øya. Dette blir gjort ved hjelp av miljøstasjonen
-som hver spiller starter med. For å aktivisere gjenvinningsprosessen må spilleren ''fysisk'' dra søppel fra øya og over på miljøstasjonen. Denne vil så bruke noe tid på å prosessere søplet og gjenvinne ressurser fra dette.
+Spillere skaffer seg ressurser ved å gjenvinne søppel som ligger spredt
+rundt på øya. Dette blir gjort ved hjelp av miljøstasjonen som hver
+spiller starter med. For å aktivisere gjenvinningsprosessen må spilleren
+``fysisk'' dra søppel fra øya og over på miljøstasjonen. Denne vil så
+bruke noe tid på å prosessere søplet og gjenvinne ressurser fra dette.
 
 
 \subsubsection{Miljøstasjon} \label{miljostasjon}
