lagt til sjanger

--- a/konseptdokument/concept.tex
+++ b/konseptdokument/concept.tex
@@ -32,9 +32,8 @@ dynamikk.
 
 \subsection{Sjanger}\label{sec:genre}
 
-%Før vi endte opp med sanntidsstrategisjangeren vurderte vi imidlertid en rekke andre mulige sjangre for realiseringen av konseptet. Spesielt eventyr- og rollespillsjangeren ble sterkt vurdert.
-
-Under vil det bli beskrivet en rekke sjangre som ble vurdert for realiseringen av \emph{Garbage Alert}. Legg dog merke til at navnet ble til en tid etter at sjangeren var valgt.
+Et dataspillsjanger er i følge Thomas H. Apperley \cite{sjanger} basert på metodikken og utfordringene i spillet. I motsetning til sjangrer innen litteratur og film er spillsjangrer uavhengig av spillets verden, tidsepoke, visualitet og historie. Det betyr at et spill om en galaktisk krig i fremtiden og et spill om 2. verdenskrig begge er klassifisert som krigsspill. Det er med andre ord utfordringene som må overkommes i spillet som definerer spillets sjanger.
+En rekke sjangre ble vurderet for realiseringen av \emph{Garbage Alert}, og disse vil bli beskrevet i korte trekk. Legg dog merke til at navnet ble til en tid etter at sjangeren var valgt.
 
 \subsubsection{Eventyr}
 Den første sjangeren som ble vurdert som utgangspunkt for realisering av
@@ -44,7 +43,7 @@ Spilldynamikken består gjerne av det å overvinne ens omgivelser ved
 utforskning og oppgaveløsning. Dette er videre forklart i ``Fundamentals
 of Game Design''~\cite{game_design}.
 
-Der finnes en hel rekke undersjangre under eventyrsjangeren. Av spesiell interesse har pek-og-klikk- og action-eventyrsjangrene vært.
+Der finnes en hel rekke undersjangrer under eventyrsjangeren. Av spesiell interesse har pek-og-klikk- og action-eventyrsjangrene vært.
 
 \begin{description}
 
