--- a/konseptdokument/referanser.bib
+++ b/konseptdokument/referanser.bib
@@ -56,3 +56,11 @@ Management},
 	 title = {Manifesto for Agile Software Development},
 	url = {\url{http://agilemanifesto.org/}}
 }
+
+@misc{sjanger,
+	Author={Thomas H. Apperley},
+	Title={Genre and game studies: Toward a critical approach to video game genres},
+	Year=2006,
+	Howpublished={Sage Publications},
+	url={\url{http://sag.sagepub.com/content/37/1/6.full.pdf+html}}
+}
