--- a/konseptdokument/referanser.bib
+++ b/konseptdokument/referanser.bib
@@ -13,25 +13,25 @@
 	Title={Six Thinking Hats: An Essential Approach to Business
 Management},
 	Howpublished={Little, Brown, \& Company},
-	Year=1985
+	Year={1985}
 }
 @misc{Scrum,
 	Author={Schwaver, Ken and Sutherland, Jeff},
 	Howpublished={\url{http://www.scrum.org/storage/scrumguides/Scrum%20Guide%20-%20NO.pdf#view=fit}},
-	Year=2010
+	Year={2010}
 }
 
 @misc{mohs,
 	Author={Prestvik, Tore},
 	Title={Mineralogi: en innføring i krystallografi og mineralogi},
 	Howpublished={Vett og Viten},
-	Year=2005
+	Year={2005}
 }
 
 @misc{game_design,
 	Author={Rollings, Andrew and Adams, Ernest},
 	Title={Fundamentals of Game Design, Prentice Hall},
-	Year=2006
+	Year={2006}
 }
 
 @online{online:agile_manifesto,
@@ -52,7 +52,7 @@ Management},
 	 Ken Schwaber and
 	 Jeff Sutherland and
 	 Dave Thomas},
-	 year = 2001,
+	 year = {2001},
 	 title = {Manifesto for Agile Software Development},
 	url = {\url{http://agilemanifesto.org/}}
 }
